argo/networkpolicy-argo-argocd-server.yaml
# Source: argo
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  labels:
    app.kubernetes.io/name: argocd-server
    app.kubernetes.io/instance: argo
    app.kubernetes.io/component: server
    app.kubernetes.io/part-of: argocd
    app.kubernetes.io/version: v3.4.4
  name: argo-argocd-server
  namespace: argo
  annotations:
    noa.re/deploy-id: 69c76c6a7861e127
spec:
  ingress:
  - {}
  podSelector:
    matchLabels:
      app.kubernetes.io/name: argocd-server
      app.kubernetes.io/instance: argo
  policyTypes:
  - Ingress
